--- a/src/ChatMessages.module.css
+++ b/src/ChatMessages.module.css
@@ -1,6 +1,6 @@
 .container {
   display: flex;
   flex-direction: column;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
   align-items: stretch;
 }
